Fix absences of colleagues on zero department